# clarpar

./: Cargo.toml  LICENSE  readme.md
parmacl/: Cargo.toml
parmacl/src/: arg.rs  lib.rs  matcher.rs  parse_error.rs  parse_error_id.rs  parse_error_type_id.rs  parse_state.rs  parser.rs  regex_or_text.rs
parmacl/tests/: line_tests.rs
parmacl_env_args_tests/: Cargo.toml  basic_arg_env_tester.rs
src/: arg.rs  env_char.rs  error.rs  lib.rs  matcher.rs  parse_error.rs  parse_error_id.rs  parse_state.rs  parser.rs  regex_or_text.rs
tests/: integration_test.rs
