[package]
name = "parmacl"
version = "0.1.0"
edition = "2021"
description = "A command line text parser. Parses a full command line string which has not already been pre-parsed into arguments by a shell."
readme = "readme.md"
homepage = "https://github.com/parmacl/parmacl"
repository = "https://github.com/parmacl/parmacl"
license = "ISC"
keywords = ["command", "line", "parser"]
categories = ["command-line-interface"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"